# hexlet-pytest

./: pyproject.toml
tests/: test_example.py
