[tool.poetry]
name = "python-test"
version = "0.1.0"
description = ""
authors = ["Anton Danilov <anton2009danilov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
